syntax = "proto3";

package auth;

option go_package ="protos/authpb";

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {bool proceed = 1; string customerId = 2;}


service AuthService {
  rpc Verify(VerifyRequest) returns (VerifyResponse) {};
}
